Clean with IntelliJ
Signed-off-by: Jarno Elovirta <jarno@elovirta.com>